# discordN225chart

./: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  main.py  n225mpl.py  requirements.txt  setup.cfg  setup.py
src/: __main__.py  discordN225chart.py  n225mpf.py  n225mpl.py  start_bot.py  upgrade_package.py
