[metadata]
name = discordN225chart
version = 1.1.0
auther = KJC
description = Post N225 chart on Discord everyday at 15:25
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/factory-KJC/discordN225chart
license = MIT

[options]
packages = find:
install_requires =
    discord.py
    jpholiday
    matplotlib
    mplfinance
    yfinance
    setuptools

[options.entry_points]
console_scripts =
    discordN225chart = __main__:main
